# lingua-analityca

./: .dockerignore  .env.example  .gitignore  Cargo.toml  LICENSE  README.md  compose.prod.yaml  compose.tools.yaml  compose.yaml  deny.toml  tailwind.config.js
.github/: copilot-instructions.md
.github/instructions/: containers.instructions.md  rust.instructions.md  security.instructions.md
.github/workflows/: build-images.yml  ci.yml  container-policy.yml
containers/app/: .dockerignore  Containerfile
containers/linguakit/: Containerfile
containers/stanford/: Containerfile
documentacion/: desarrollo-local.md  despliegue-ghcr.md  imagenes-contenedores.md
src/: decision_engine.rs  linguakit_client.rs  main.rs  models.rs  routes.rs  stanford_client.rs
src/routes/: analysis.rs  batch.rs  gold.rs  graph.rs  handlers.rs  mod.rs  report.rs  tokens.rs
static/css/: lingua-ui.css  lingua.css
templates/: index.html  metodologia.html
templates/partials/: resultado.html
