[package]
name = "lingua-analytica"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
actix-web = "4.14.0"
actix-files = "0.6.10"
tera = "2.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
reqwest = { version = "0.13.4", features = ["json"] }
dotenvy = "0.15.7"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "process", "fs"] }
urlencoding = "2.1.3"